--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is backend of ecommerce",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js" 
+    "start": "node ./src/index.js" 
   },  
   "keywords": [
     "ecommerce",
